--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ForAnimalsWithLove - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - ForAnimalsWithLove
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
