start creating home page

--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ForAnimalsWithLove.styles.css" asp-append-version="true" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="~/images/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
