--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -2,7 +2,36 @@
     ViewData["Title"] = "Home Page";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
+</head>
+
+<body>
+    <section>
+       
+            <ul id="first-img">
+                <img id="first-img-element" src="~/images/welcomeanimals.jpg" alt="animals" />
+            </ul>
+
+            <h3 id="helpcase"> За спешни случаи може да се свържете с нас денонощно на тел. 0700 20 300 </h3>
+           
+
+            
+       
+    </section>
+   
+   
+
+    <main>
+
+
+    </main>
+</body>
+
+
+@*
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+*@
