--- a/ForAnimalsWithLove/wwwroot/css/login.css
+++ b/ForAnimalsWithLove/wwwroot/css/login.css
@@ -28,7 +28,7 @@ p {
 }
 
 #login-submit {
-    background-color: coral;
+    background-color: darksalmon;
     border: 4px solid rgba(100, 100, 100, 1);
     border-radius: 75px;
 }
