--- a/ForAnimalsWithLove/wwwroot/css/register.css
+++ b/ForAnimalsWithLove/wwwroot/css/register.css
@@ -19,7 +19,7 @@
 }
 
 #registerSubmit {
-    background-color: coral;
+    background-color: darksalmon;
     border: 4px solid rgba(100, 100, 100, 1);
     border-radius: 75px;
 }
