--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ForAnimalsWithLove
+            &copy; ForAnimalsWithLove - 2023
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
