--- a/ForAnimalsWithLove/Views/_ViewImports.cshtml
+++ b/ForAnimalsWithLove/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using ForAnimalsWithLove
-@using ForAnimalsWithLove.Models
+﻿@using ForAnimalsWithLove;
+@using ForAnimalsWithLove.Data.Models;
+@using ForAnimalsWithLove.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
