--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    //Layout = null;
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -81,8 +81,8 @@
         <div class="navbar container-fluid">
             <div class="container">
                 <!-- logo -->
-                <a class="navbar-brand" href="index.html">
-                    <i class="flaticon-dog-20"></i><span>Woof!</span>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <img src="~/images/logo.png" style="block-size: 100px; margin: 0; padding:0" alt="ForAnimalsWithLove">
                 </a>
                 <!-- Navbartoggler -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,14 +94,14 @@
                     <ul class="navbar-nav ms-auto">
                         <!-- menu item -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">
-                                Home
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">
+                                За нас
                             </a>
                         </li>
                         <!-- menu item -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Services
+                            <a class="nav-link dropdown-toggle" asp-controller="Home" asp-action="Privacy" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Отделения
                             </a>
                             <div class="dropdown-menu" aria-labelledby="services-dropdown">
                                 <a class="dropdown-item" href="services.html">Services Style 1</a>
@@ -112,7 +112,7 @@
                         <!-- menu item -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="about-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                About
+                                Осинови
                             </a>
                             <div class="dropdown-menu" aria-labelledby="about-dropdown">
                                 <a class="dropdown-item" href="about.html">About Style 1</a>
@@ -122,7 +122,7 @@
                         <!-- menu item -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="adopt-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Adopt
+                                Полезна информация
                             </a>
                             <div class="dropdown-menu" aria-labelledby="adopt-dropdown">
                                 <a class="dropdown-item" href="adoption.html">Adoption Gallery</a>
@@ -142,25 +142,22 @@
                         <!-- menu item -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Contact
+                                Контакти
                             </a>
                             <div class="dropdown-menu" aria-labelledby="contact-dropdown">
                                 <a class="dropdown-item" href="contact.html">Contact Style 1</a>
                                 <a class="dropdown-item" href="contact2.html">Contact Style 2</a>
                             </div>
                         </li>
-                        <!-- menu item -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="others-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Other pages
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-action="Register">
+                                Регистрация
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="others-dropdown">
-                                <a class="dropdown-item" href="team.html">Our Team</a>
-                                <a class="dropdown-item" href="blog.html">Blog Home</a>
-                                <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-                                <a class="dropdown-item" href="elements.html">Elements Page</a>
-                                <a class="dropdown-item" href="404.html">404 Page</a>
-                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-action="Login">
+                                Вход
+                            </a>
                         </li>
                     </ul>
                     <!--/ul -->
