set data and add new entity

--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -1032,9 +1032,9 @@
                 <div class="col-lg-3">
                     <h6><i class="fas fa-envelope margin-icon"></i>Contact Us</h6>
                     <ul class="list-unstyled">
-                        <li>(123) 456-789</li>
-                        <li><a href="mailto:email@yoursite.com">email@yoursite.com</a></li>
-                        <li>Pet Street 123 - New York </li>
+                        <li>0700 12 323</li>
+                        <li><a href="mailto:email@yoursite.com">office@foranimalswithlove.bg</a></li>
+                        <li>Pet Street 123 - Sofia </li>
                     </ul>
                     <!--/ul -->
                 </div>
@@ -1042,20 +1042,13 @@
                 <div class="col-lg-3">
                     <h6><i class="far fa-clock margin-icon"></i>Working Hours</h6>
                     <ul class="list-unstyled">
-                        <li>Open 9am - 10pm</li>
-                        <li>Holidays - Closed</li>
-                        <li>Weekends - Closed</li>
+                        <li>Open 0am - 24pm</li>
                     </ul>
                     <!--/ul -->
                 </div>
                 <!--/ col-lg -->
             </div>
-            <!--/ row-->
-            <div class="row">
-                <div class="credits col-sm-12">
-                    <p>Designed by <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a></p>
-                </div>
-            </div>
+            
             <!--/ row -->
         </div>
         <!--/ container -->
